# Voice-Agent

./: .env.example  .gitignore  README.en.md  README.md  TODO.md  assistant.py  pyproject.toml  voice_assistant.py  voicechat.sh  wav_check.py
config/: config.example.yaml  phrase_test_words.json  whisper_bench.toml  whisper_models.yaml
docs/: 01_overview_design.md  02_architecture_design.md  03_detailed_design.md  04_class_design.md  05_sequence_design.md  06_data_design.md  07_test_design.md  08_operations_design.md  09_remote_offload_design.md  README.md  architecture.en.md  architecture.md  browser_console_design.md  stt_benchmark_guide.md
legacy/: README.md  whisper_only.py
src/: audio_preprocess.py  command_runtime.py  config_loader.py  llm_api.py  player.py  recorder.py  runtime_files.py  speech_recognition_runner.py  test_voicechat_loop.py  transcript_correction.py  voicechat_audio.py  vosk_runner.py  whisper_runner.py
systemd/: README.md  voicechat.service
tools/: cohere_phrase_test.py  cohere_transcribe.py  cohere_transcribe_file.py  cohere_transcribe_mic.py  download_models.py  faster_whisper_bench.py  gen_5min_test.py  gen_test_audio.py  google_stt.py  google_stt_credentials.py  google_stt_test.py  recognition_alias_manager.py  record_until_silence.py  remote_faster_whisper_bench.py  remote_faster_whisper_transcribe.py  setup_env.py  show_status.py  stt_bench_pi.py  stt_bench_wcpp.py  stt_benchmark.py  stt_full_benchmark.py  timed_record_transcribe.py  transcribe_file_local.py  vad_benchmark.py  wake_vad_record.py  web_console.py  whisper_bench.py  (+3 more)
(+20 files in other folders)
